<resources>
    <string name="app_name">Lassie</string>
    <string name="action_settings">Instellingen</string>
    <string name="action_search">Zoeken</string>
    <string name="button_continue">Registreer</string>
    <string name="edittext_email">Vul hier uw e-mail in</string>
    <string name="edittext_gebruikersnaam">Uw gewenste naam</string>
    <string name="textview_email">E-mail</string>
    <string name="textview_gebruikersnaam">Gebruikersnaam</string>
    <string name="textview_wachtwoord">Wachtwoord</string>
    <string name="textview_herhaal_wachtwoord">Herhaal wachtwoord</string>
    <string name="textview_nieuw_account">Nieuw account aanmaken</string>
    <string name="textview_login_met">Of login met</string>
    <string name="textview_of">of</string>
    <string name="imageview_facebook">Facebook</string>
    <string name="imageview_google">Google</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_vermist">Vermist</string>
    <string name="button_gevonden">Gevonden</string>
    <string name="button_plaats_bericht">Plaats bericht</string>
    <string name="menu_open">Drawer open</string>
    <string name="menu_gesloten">Drawer close</string>
    <string name="textview_profiel">Bekijk profiel</string>
    <string name="contentdescription_logo">Logo</string>
    <string name="textview_status_vermist">Vermist</string>
    <string name="textview_status_gevonden">Gevonden</string>
    <string name="contentdescription_profiel">Profiel</string>
    <string name="textview_gegevens_lassie">Lassie \nCollie \nWit met bruin</string>
    <string name="textview_gegevens_hond_voorbeeld">Zoef \nBeagle \nBruin met wit</string>
    <string name="textview_gegevens_kat_voorbeeld">Frank \nLapjeskat \nGrijs/bruin met wit</string>
    <string name="diernaam">Naam van het dier</string>
    <string name="gegevens_dier">Soort dier \nUiterlijke kenmerken of bijzondere eigenschappen</string>
    <string name="button_opslaan">Opslaan</string>
    <string name="textview_account">Account</string>
    <string name="textview_taal">Taal</string>
    <string name="textview_nederlands">Nederlands</string>
    <string name="textview_engels">Engels</string>
    <string name="textview_meldingen">Meldingen</string>
    <string name="textview_reactie">Bij een reactie</string>
    <string name="textview_volger">Bij een nieuwe volger</string>
    <string name="Zoef">Zoef</string>
    <string name="button_details">Details</string>
    <string name="textview_naam">Naam:</string>
    <string name="textview_ras">Ras:</string>
    <string name="textview_kleur">Kleur:</string>
    <string name="textview_eigenschappen">Kenmerk:</string>
    <string name="button_reageer">Reageer</string>
    <string name="bewerk">Bewerken</string>
    <string name="button_send">Plaatsen</string>

    <!-- Menu items -->
    <string-array name="menu_items">
        <item>Home</item>
        <item>Mijn overzicht</item>
        <item>Plaats bericht vermissing</item>
        <item>Plaats bericht gevonden dier</item>
        <item>Lijst/kaart vermissingen</item>
        <item>Gebruikerspagina</item>
        <item>Notificaties</item>
        <item>Instellingen</item>
    </string-array>
    <string name="title_activity_lijst">Lijst</string>
    <string name="hello_world">Hello world!</string>
</resources>

